# mh_autotune

./: .gitignore  CMakeLists.txt  README.md  dependencies.yaml  package.xml
include/: trajectory_helper.h
launch/: agitune.launch  diagnostic.launch  flightmare.launch  update_params.launch
params/: autotune.yaml  diagnostic.yaml  mpc.yaml
resources/: history.csv  parameters.csv
resources/statistics/2021-02-18-17-26-00_traj/20210225-151513/: 20210225-151541.csv  20210225-151612.csv  20210225-151642.csv  20210225-151713.csv  20210225-151743.csv  20210225-151814.csv  20210225-151844.csv  20210225-151914.csv  20210225-151945.csv  20210225-152015.csv  20210225-152046.csv  20210225-152116.csv  20210225-152146.csv  20210225-152217.csv  20210225-152247.csv  20210225-152317.csv  20210225-152348.csv  20210225-152418.csv  20210225-152449.csv  20210225-152519.csv  20210225-152549.csv  20210225-152620.csv  20210225-152650.csv  20210225-152720.csv  20210225-152751.csv  20210225-152821.csv  (+377 more)
resources/training_data/: 13.0308.csv  14.0563.csv  14.5504.csv  14.9865.csv  16.967.csv  17.9542.csv  19.4576.csv  22.2882.csv  24.107.csv  31.4057.csv  32.5259.csv  39.4203.csv  8.64817.csv
resources/trajectories/: 2021-02-18-17-26-00_traj.csv  drop.csv  paper_1_65_twr_rampup.csv  paper_2_5_twr_rampup_splits.csv  paper_3_15_twr_rampup_splits.csv  paper_3_3_twr_rampup_splits.csv  paper_3_twr_rampup_splits.csv  spiral.csv
rviz/: default.rviz
src/: autotune.py  diagnostic.py  drone.py  pivot.py  planner.py  regressor.py  track.py  update_params.py
src/tf/: odom_tf_broadcaster.cpp
(+1202 files in other folders)
